Prepare to standalone run.

--- a/mqtt.config
+++ b/mqtt.config
@@ -5,12 +5,12 @@
 
 	{lager, [
 %% log levels: none, debug, info, notice, warning, error, critical, alert, emergency
-    {error_logger_redirect, false},
+    {error_logger_redirect, true},
     {log_root, "logs"},
     {handlers, [
       {lager_console_backend, [
-%         debug, 
-         info, 
+         debug, 
+%         info, 
          {lager_default_formatter, [
             time, " [",severity,"] ", pid, " ", 
             {module, [module, ":"], [""]}, 
@@ -26,7 +26,7 @@
     ]}
   ]},
 
-	{mqtt_client, [
+	{mqtt_server, [
 		{host, "localhost"}, 
 		{port, 2882}
 	]}
