Add reading params from config. Add user/password save to DB. Add documentation. Add new release.

--- a/mqtt.config
+++ b/mqtt.config
@@ -27,7 +27,12 @@
   ]},
 
 	{mqtt_server, [
-		{host, "localhost"}, 
-		{port, 2882}
+%		{storage, mysql},
+		{storage, dets},
+		{port, 18883},
+		{port_tsl, 18483},
+		{certfile, "tsl/server.crt"},
+		{certfile, "tsl/ca.crt"},
+		{certfile, "tsl/server.key"}
 	]}
 ].
