Implement websocket connection. Add MQTT protokol version 3.1 support.

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {src_dirs, ["src"]}.
 
 {deps, [
+    {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.0.0"}}},
     {mqtt_common, {git, "git://git.code.sf.net/p/mqtt-client/common", {branch, "master"}}},
     {lager,       {git, "git://github.com/basho/lager.git",        {branch, "master"}}},
     {ranch,       {git, "git://github.com/ninenines/ranch.git",    {branch, "master"}}}
