Add SSL/TSL websocket connection listener.

--- a/mqtt.config
+++ b/mqtt.config
@@ -31,8 +31,10 @@
 		{storage, dets},
 		{port, 18883},
 		{port_tsl, 18483},
+		{port_ws, 8080},
 		{certfile, "tsl/server.crt"},
 		{certfile, "tsl/ca.crt"},
-		{certfile, "tsl/server.key"}
+		{certfile, "tsl/server.key"},
+		{verify, verify_peer}
 	]}
 ].
