Change disconnect functionality. Add multi client test (performance test).

--- a/mqtt-client.config
+++ b/mqtt-client.config
@@ -9,7 +9,8 @@
     {log_root, "logs"},
     {handlers, [
       {lager_console_backend, [
-         debug, 
+         none, 
+%         debug, 
 %         info, 
          {lager_default_formatter, [
             time, " [",severity,"] ", pid, " ", 
@@ -26,16 +27,8 @@
     ]}
   ]},
 
-	{mqtt_server, [
+	{mqtt_client, [
 %		{storage, mysql},
-		{storage, dets},
-		{port, 18883},
-		{port_tsl, 18483},
-		{port_ws, 8080},
-		{port_wss, 8443},
-		{certfile, "tsl/server.crt"},
-		{certfile, "tsl/ca.crt"},
-		{certfile, "tsl/server.key"},
-		{verify, verify_peer}
+		{storage, dets}
 	]}
 ].
