Add restful service for user db.

--- a/mqtt.config
+++ b/mqtt.config
@@ -1,6 +1,7 @@
 [
 	{sasl, [
-			{sasl_error_logger, false}
+			{sasl_error_logger, false},
+			{utc_log, true}
 	]},
 
 	{lager, [
@@ -9,8 +10,8 @@
     {log_root, "logs"},
     {handlers, [
       {lager_console_backend, [
-         debug, 
-%         info, 
+%         debug, 
+         info, 
          {lager_default_formatter, [
             time, " [",severity,"] ", pid, " ", 
             {module, [module, ":"], [""]}, 
@@ -32,7 +33,7 @@
 		{port, 18883},
 		{port_tsl, 18483},
 		{port_ws, 8080},
-		{port_wss, 8443},
+		{port_wss, 4443},
 		{certfile, "tsl/server.crt"},
 		{certfile, "tsl/ca.crt"},
 		{certfile, "tsl/server.key"},
