--- a/rebar.config
+++ b/rebar.config
@@ -13,6 +13,8 @@
   {parse_transform, lager_transform}
 ]}.
 
+{overrides, [{override, mqtt_common, [{erl_opts, [no_debug_info,{parse_transform, lager_transform},{d, 'TEST'}]}]}]}.
+
 {eunit_compile_opts, [{src_dirs, []}]}.
 {eunit_opts, [verbose]}.
 
