--- a/mqtt-client.config
+++ b/mqtt-client.config
@@ -1,6 +1,7 @@
 [
 	{sasl, [
-			{sasl_error_logger, false}
+			{sasl_error_logger, false},
+			{utc_log, true}
 	]},
 
 	{lager, [
@@ -9,9 +10,9 @@
     {log_root, "logs"},
     {handlers, [
       {lager_console_backend, [
-         none, 
+%         none, 
 %         debug, 
-%         info, 
+         info, 
          {lager_default_formatter, [
             time, " [",severity,"] ", pid, " ", 
             {module, [module, ":"], [""]}, 
