--- a/mqtt.config
+++ b/mqtt.config
@@ -35,8 +35,8 @@
 		{port_ws, 8080},
 		{port_wss, 4443},
 		{certfile, "tsl/server.crt"},
-		{certfile, "tsl/ca.crt"},
-		{certfile, "tsl/server.key"},
+		{cacertfile, "tsl/rootCA.pem"},
+		{keyfile, "tsl/server.key"},
 		{verify, verify_peer}
 	]}
 ].
