Change some foles for sim.

--- a/mqtt.config
+++ b/mqtt.config
@@ -6,7 +6,7 @@
 
 	{lager, [
 %% log levels: none, debug, info, notice, warning, error, critical, alert, emergency
-    {error_logger_redirect, true},
+    {error_logger_redirect, false},
     {log_root, "logs"},
     {handlers, [
       {lager_console_backend, [
@@ -32,7 +32,7 @@
 		{storage, dets},
 		{port, 18883},
 		{port_tsl, 18483},
-		{port_ws, 8080},
+		{port_ws, 8880},
 		{port_wss, 4443},
 		{certfile, "tsl/server.crt"},
 		{cacertfile, "tsl/rootCA.pem"},
