--- a/rebar.config
+++ b/rebar.config
@@ -2,9 +2,9 @@
 
 {deps, [
     {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.0.0"}}},
-    {mqtt_common, {git, "git://git.code.sf.net/p/mqtt-client/common", {branch, "master"}}},
-    {lager,       {git, "git://github.com/basho/lager.git",        {branch, "master"}}},
-    {ranch,       {git, "git://github.com/ninenines/ranch.git",    {branch, "master"}}}
+    {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "master"}}},
+    {lager,       {git, "https://github.com/basho/lager.git",        {branch, "master"}}},
+    {ranch,       {git, "https://github.com/ninenines/ranch.git",    {branch, "master"}}}
   ]
 }.
 
