--- a/rebar.config
+++ b/rebar.config
@@ -34,7 +34,24 @@
   {includes, ["include"]}
 ]}.
 
+{relx, [
+  {release, {mqtt_server, "1.0.3" }, [mqtt_server, sasl] },
+  {sys_config, "./config/sys.config"},
+  {vm_args, "./config/vm.args"},
+  {dev_mode, false},
+  {include_erts, true},
+  {extended_start_script, true}
+]}.
+
 {profiles, [
+  {prod, [
+    {relx, [
+      {dev_mode, false},
+      {include_erts, true},
+      {include_src, false}
+    ]}
+  ]},
+
   {test, [
     {src_dirs, ["src"]},
     {deps, [
