--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,10 @@
 {src_dirs, ["src"]}.
 
 {deps, [
-    {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.0.0"}}},
+    {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.6.3"}}},
     {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "master"}}},
-    {lager,       {git, "https://github.com/basho/lager.git",        {branch, "master"}}},
-    {ranch,       {git, "https://github.com/ninenines/ranch.git",    {branch, "master"}}}
+    {lager,       {git, "https://github.com/basho/lager.git",        {branch, "master"}}}
+%%    {ranch,       {git, "https://github.com/ninenines/ranch.git",    {branch, "master"}}}
   ]
 }.
 
