Set up testing for v5.

--- a/rebar.config
+++ b/rebar.config
@@ -2,8 +2,8 @@
 
 {deps, [
     {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.6.3"}}},
-    {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "master"}}},
-    {lager,       {git, "https://github.com/basho/lager.git",        {branch, "master"}}}
+    {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "mqtt_v5"}}}
+%%    {lager,       {git, "https://github.com/basho/lager.git",        {branch, "master"}}}
 %%    {ranch,       {git, "https://github.com/ninenines/ranch.git",    {branch, "master"}}}
   ]
 }.
@@ -15,7 +15,7 @@
 
 {overrides, [{override, mqtt_common, [{erl_opts, [no_debug_info,{parse_transform, lager_transform},{d, 'TEST'}]}]}]}.
 
-{eunit_compile_opts, [{src_dirs, []}]}.
+{eunit_compile_opts, [{src_dirs, ["src"]}]}.
 {eunit_opts, [verbose]}.
 
 {cover_enabled, false}.
@@ -53,9 +53,12 @@
   ]},
 
   {test, [
-    {src_dirs, ["src"]},
+    {eunit_compile_opts, [{src_dirs, ["src"]}]},
+    {eunit_tests, [{dir, "test"},{dir, "test/v5"}]},
+    {eunit_opts, [verbose]},
+    {overrides, [{override, mqtt_common, [{erl_opts, [no_debug_info,{parse_transform, lager_transform},{d, 'TEST'}]}]}]},
     {deps, [
-      {mqtt_client, {git, "git://git.code.sf.net/p/mqtt-client/git", {branch, "master"}}}
+      {mqtt_client, {git, "https://github.com/alekras/mqtt_client.git", {branch, "mqtt_v5"}}}
     ]}
 	]}
 ]}.
