--- a/.settings/org.erlide.core.prefs
+++ b/.settings/org.erlide.core.prefs
@@ -5,4 +5,4 @@ external_includes=
 external_modules=
 include_dirs=include;_build/default/lib/mqtt_common/include;
 output_dir=_build/default/lib/mqtt_server/ebin
-source_dirs=src;test;
+source_dirs=src;test;test/v5;
