--- a/mqtt-client.config
+++ b/mqtt-client.config
@@ -10,11 +10,10 @@
     {log_root, "logs"},
     {handlers, [
       {lager_console_backend, [
-%         none, 
-%         debug, 
-         info, 
-         {lager_default_formatter, [
-            time, " [",severity,"] ", pid, " ", 
+         {level, debug},
+         {formatter, lager_default_formatter},
+         {formatter_config, [
+            date, "^", time, " [",severity,"] ", pid, " ", 
             {module, [module, ":"], [""]}, 
             {function, [function, ":"], [""]}, 
             {line, [line], [""]},
