--- a/mqtt.config
+++ b/mqtt.config
@@ -10,10 +10,10 @@
     {log_root, "logs"},
     {handlers, [
       {lager_console_backend, [
-%         debug, 
-         info, 
-         {lager_default_formatter, [
-            time, " [",severity,"] ", pid, " ", 
+         {level, debug},
+         {formatter, lager_default_formatter},
+         {formatter_config, [
+            "  ", date, "T", time, " [",severity,"] ", pid, " ", 
             {module, [module, ":"], [""]}, 
             {function, [function, ":"], [""]}, 
             {line, [line], [""]},
