--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 
 {deps, [
     {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.6.3"}}},
-    {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "mqtt_v5"}}}
+    {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "master"}}}
 %%    {lager,       {git, "https://github.com/basho/lager.git",        {branch, "master"}}}
 %%    {ranch,       {git, "https://github.com/ninenines/ranch.git",    {branch, "master"}}}
   ]
@@ -58,7 +58,7 @@
     {eunit_opts, [verbose]},
     {overrides, [{override, mqtt_common, [{erl_opts, [no_debug_info,{parse_transform, lager_transform},{d, 'TEST'}]}]}]},
     {deps, [
-      {mqtt_client, {git, "https://github.com/alekras/mqtt_client.git", {branch, "mqtt_v5"}}}
+      {mqtt_client, {git, "https://github.com/alekras/mqtt_client.git", {branch, "master"}}}
     ]}
 	]}
 ]}.
