Fix up rebar release build.

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 # version
-version=1.0.2
+version=1.0.4
 
-env.ERL_ROOT=/usr/local/Cellar/erlang/20.0/lib/erlang
+env.ERL_ROOT=/usr/local/Cellar/erlang/23.0/lib/erlang/
