--- a/mqtt.config
+++ b/mqtt.config
@@ -21,7 +21,7 @@
             message, "\n"
          ]}
       ]},
-      {lager_file_backend, [{file, "common.log.txt"}, {level, info}]}
+      {lager_file_backend, [{file, "server.log.txt"}, {level, info}]}
     ]},
     {traces, [
     ]}
