--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,7 @@
 {clean_files, ["doc/*"]}.
 
 {edoc_opts, [
-  {def, [{version, "1.0.2"}]},
+  {def, [{version, "1.0.4"}]},
   {private, false},
   {source_path, ["src"]},
   {title, "MQTT server for Erlang"}, 
@@ -35,12 +35,16 @@
 ]}.
 
 {relx, [
-  {release, {mqtt_server, "1.0.3" }, [mqtt_server, sasl] },
+  {release, {mqtt_server, "1.1.0" }, [mqtt_server, sasl] },
   {sys_config, "./config/sys.config"},
   {vm_args, "./config/vm.args"},
   {dev_mode, false},
   {include_erts, true},
-  {extended_start_script, true}
+  {extended_start_script, true},
+	{overlay, [{mkdir, "dets-storage"},
+							{mkdir, "tsl"},
+							{copy, "dets-storage/users-db-srv.bin", "dets-storage/users-db-srv.bin"},
+							{copy, "tsl/*", "tsl/"}]}
 ]}.
 
 {profiles, [
