--- a/config/sys.config
+++ b/config/sys.config
@@ -10,10 +10,10 @@
     {log_root, "logs"},
     {handlers, [
       {lager_console_backend, [
-%         debug, 
-         info, 
-         {lager_default_formatter, [
-            time, " [",severity,"] ", pid, " ", 
+        {level, debug},
+         {formatter, lager_default_formatter},
+         {formatter_config, [
+            "  ", date, "T", time, " [",severity,"] ", pid, " ", 
             {module, [module, ":"], [""]}, 
             {function, [function, ":"], [""]}, 
             {line, [line], [""]},
@@ -21,7 +21,7 @@
             message, "\n"
          ]}
       ]},
-      {lager_file_backend, [{file, "common.log.txt"}, {level, info}]}
+      {lager_file_backend, [{file, "server.log.txt"}, {level, info}]}
     ]},
     {traces, [
     ]}
@@ -37,6 +37,6 @@
 		{certfile, "tsl/server.crt"},
 		{cacertfile, "tsl/rootCA.pem"},
 		{keyfile, "tsl/server.key"},
-		{verify, verify_peer}
+		{verify, verify_none}
 	]}
 ].
