After validation testing.

--- a/config/sys.config
+++ b/config/sys.config
@@ -21,7 +21,19 @@
             message, "\n"
          ]}
       ]},
-      {lager_file_backend, [{file, "server.log.txt"}, {level, info}]}
+      {lager_file_backend, [
+        {file, "server.log.txt"},
+        {level, info},
+        {formatter, lager_default_formatter},
+        {formatter_config, [
+           date, "T", time, " [",severity,"] ", pid, " ", 
+           {module, [module, ":"], [""]}, 
+           {function, [function, ":"], [""]}, 
+           {line, [line], [""]},
+           {endtype, [" -", endtype, "- "], [" - "]}, 
+           message, "\n"
+        ]}
+      ]}
     ]},
     {traces, [
     ]}
