--- a/mqtt.config
+++ b/mqtt.config
@@ -21,7 +21,19 @@
             message, "\n"
          ]}
       ]},
-      {lager_file_backend, [{file, "server.log.txt"}, {level, info}]}
+      {lager_file_backend, [
+         {file, "server.log.txt"},
+         {level, info},
+         {formatter, lager_default_formatter},
+         {formatter_config, [
+            date, "T", time, " [",severity,"] ", pid, " ", 
+            {module, [module, ":"], [""]}, 
+            {function, [function, ":"], [""]}, 
+            {line, [line], [""]},
+            {endtype, [" -", endtype, "- "], [" - "]}, 
+            message, "\n"
+         ]}
+      ]}
     ]},
     {traces, [
     ]}
@@ -34,9 +46,9 @@
 		{port_tsl, 18483},
 		{port_ws, 8880},
 		{port_wss, 4443},
-		{certfile, "tsl/server.pem"},
-		{cacertfile, "tsl/rootCA.pem"},
-		{keyfile, "tsl/server.key"},
+		{certfile, "tls/server.pem"},
+		{cacertfile, "tls/rootCA.pem"},
+		{keyfile, "tls/server.key"},
 		{verify, verify_none}
 	]}
 ].
