--- a/mqtt.config
+++ b/mqtt.config
@@ -43,12 +43,12 @@
 %		{storage, mysql},
 		{storage, dets},
 		{port, 18883},
-		{port_tsl, 18483},
+		{port_tls, 18483},
 		{port_ws, 8880},
 		{port_wss, 4443},
-		{certfile, "tls/server.pem"},
-		{cacertfile, "tls/rootCA.pem"},
-		{keyfile, "tls/server.key"},
+		{certfile, "/root/.ssh/lucky3p.com/certificate.crt"},
+		{cacertfile, "/root/.ssh/lucky3p.com/ca_bundle.crt"},
+		{keyfile, "/root/.ssh/lucky3p.com/private.key"},
 		{verify, verify_none}
 	]}
 ].
