Fix up TLS connection issue.

--- a/mqtt.config
+++ b/mqtt.config
@@ -11,6 +11,7 @@
     {handlers, [
       {lager_console_backend, [
          {level, debug},
+%%         {level, error},
          {formatter, lager_default_formatter},
          {formatter_config, [
             "  ", date, "T", time, " [",severity,"] ", pid, " ", 
@@ -49,6 +50,9 @@
 		{certfile, "/root/.ssh/lucky3p.com/certificate.crt"},
 		{cacertfile, "/root/.ssh/lucky3p.com/ca_bundle.crt"},
 		{keyfile, "/root/.ssh/lucky3p.com/private.key"},
+%		{certfile, "tls/server/cert.pem"},
+%		{cacertfile, "tls/server/cacerts.pem"},
+%		{keyfile, "tls/server/key.pem"},
 		{verify, verify_none}
 	]}
 ].
