--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {src_dirs, ["src"]}.
 
 {deps, [
-    {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.6.3"}}},
+    {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.9.0"}}},
     {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "master"}}}
 %%    {lager,       {git, "https://github.com/basho/lager.git",        {branch, "master"}}}
 %%    {ranch,       {git, "https://github.com/ninenines/ranch.git",    {branch, "master"}}}
@@ -44,7 +44,7 @@
 	{overlay, [{mkdir, "dets-storage"},
 							{mkdir, "tsl"},
 							{copy, "dets-storage/users-db-srv.bin", "dets-storage/users-db-srv.bin"},
-							{copy, "tsl/*", "tsl/"}]}
+							{copy, "tls/*", "tls/"}]}
 ]}.
 
 {profiles, [
