--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 /erl.mqtt.server-vsn-1.0.2.zip
 /dets-storage/
 /rebar.lock
+/petstore_openapi.yaml
+/petstore_swagger.yaml
+/openapi.yaml
+/tls_cnfg/
