--- a/mqtt.config
+++ b/mqtt.config
@@ -47,12 +47,12 @@
 		{port_tls, 18483},
 		{port_ws, 8880},
 		{port_wss, 4443},
-		{certfile, "/root/.ssh/lucky3p.com/certificate.crt"},
-		{cacertfile, "/root/.ssh/lucky3p.com/ca_bundle.crt"},
-		{keyfile, "/root/.ssh/lucky3p.com/private.key"},
-%		{certfile, "tls/server/cert.pem"},
-%		{cacertfile, "tls/server/cacerts.pem"},
-%		{keyfile, "tls/server/key.pem"},
+%		{certfile, "/home/alexei/.ssh/lucky3p.com/certificate.crt"},
+%		{cacertfile, "/home/alexei/.ssh/lucky3p.com/ca_bundle.crt"},
+%		{keyfile, "/home/alexei/.ssh/lucky3p.com/private.key"},
+		{certfile, "tls_cnfg/server/cert.pem"},
+		{cacertfile, "tls_cnfg/server/cacerts.pem"},
+		{keyfile, "tls_cnfg/server/key.pem"},
 		{verify, verify_none}
 	]}
 ].
