--- a/mqtt_rest_v2.yaml
+++ b/mqtt_rest_v2.yaml
@@ -2,19 +2,19 @@ swagger: "2.0"
 info:
   title: "MQTT server API"
   description: >-
-    This is a RESTful API of MQTT server. The API manages user database of MQTT server.
+    This is a RESTful API of MQTT server management. The API manages user database of MQTT server.
     See for details https://github.com/alekras/erl.mqtt.server
   contact:
     email: krasnop@bellsouth.net
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-  version: "1.0.0"
+  version: "1.0.1"
 externalDocs:
   description: Find out more about Erlang MQTT server
   url: https://github.com/alekras/erl.mqtt.server
-host: "lucky3p.com"
-basePath: "/v2"
+host: "lucky3p.com:8880"
+basePath: "/rest"
 tags:
 - name: "user"
   description: "Manage user database"
@@ -22,10 +22,10 @@ tags:
     description: "Find out more"
     url: "http://lucky3p.com"
 schemes:
-- "https"
 - "http"
+- "https"
 paths:
-  /rest/user/{user_name}:
+  /user/{user_name}:
     parameters:
       - name: "user_name"
         in: "path"
@@ -35,16 +35,16 @@ paths:
     get:
       tags:
         - "user"
-      summary: "Get user's password in md5 format"
-      description: "Returns a user's password"
-      operationId: "getUserPassword"
+      summary: "Get user's information"
+      description: "Returns a user's password in md5 format and list of roles"
+      operationId: "getUserInfo"
       produces:
       - "application/json"
       responses:
         "200":
-          description: "successful operation"
+          description: "Successful operation"
           schema:
-            type: "string"
+            $ref: "#/definitions/User"
         "400":
           description: "Invalid user name supplied"
         "404":
@@ -52,7 +52,7 @@ paths:
     post:
       tags:
         - "user"
-      summary: "Add a new user/password to the database"
+      summary: "Add a new user to the database"
       operationId: "createNewUser"
       consumes:
       - "application/x-www-form-urlencoded"
@@ -61,10 +61,10 @@ paths:
       parameters:
       - in: "body"
         name: "body"
-        description: "User's password in md5 format"
+        description: "User's password in md5 format and roles"
         required: true
         schema:
-          type: "string"
+          $ref: "#/definitions/User"
       responses:
         "201":
           description: "Successful operation"
@@ -73,14 +73,14 @@ paths:
     delete:
       tags:
       - "user"
-      summary: "Delete user/password in the database"
+      summary: "Delete user in the database"
       operationId: "deleteUser"
       responses:
         "200":
           description: "Successful operation"
         "404":
           description: "User not found"
-  /rest/user/{user_name}/status:
+  /user/{user_name}/status:
     get:
       tags:
         - "user"
@@ -104,7 +104,7 @@ paths:
           description: "Invalid user name supplied"
         "404":
           description: "User not found"
-  /rest/user/status:
+  /user/status:
     get:
       tags:
         - "user"
@@ -120,8 +120,9 @@ paths:
         name: "users"
         description: "List of user names"
         required: true
+        type: array
+        collectionFormat: csv
         uniqueItems: true
-        type: "array"
         items:
           type: "string"
       responses:
@@ -134,6 +135,15 @@ paths:
         "404":
           description: "User not found"
 definitions:
+  User:
+    type: object
+    properties:
+      password:
+        type: string
+      roles:
+        type: array
+        items:
+          type: string
   ConnectionStatus:
     type: "object"
     properties:
