Separate REST http server from MQTT server.

--- a/apps/mqtt_rest/rebar.config
+++ b/apps/mqtt_rest/rebar.config
@@ -4,3 +4,8 @@
     {jsx, {git, "https://github.com/talentdeficit/jsx.git", {tag, "v3.1.0"}}},
     {jesse, {git, "https://github.com/for-GET/jesse.git", {tag, "1.5.6"}}}
 ]}.
+
+{erl_opts, [
+  no_debug_info, 
+  {parse_transform, lager_transform}
+]}.
