upgrade after local testing.

--- a/mqtt.config
+++ b/mqtt.config
@@ -47,6 +47,7 @@
 		{port_tls, 18483},
 		{port_ws, 8880},
 		{port_wss, 4443},
+		{port_rest, 8080},
 %		{certfile, "/home/alexei/.ssh/lucky3p.com/certificate.crt"},
 %		{cacertfile, "/home/alexei/.ssh/lucky3p.com/ca_bundle.crt"},
 %		{keyfile, "/home/alexei/.ssh/lucky3p.com/private.key"},
