update release support

--- a/config/sys.config
+++ b/config/sys.config
@@ -10,7 +10,7 @@
     {log_root, "logs"},
     {handlers, [
       {lager_console_backend, [
-        {level, debug},
+         {level, info},
          {formatter, lager_default_formatter},
          {formatter_config, [
             "  ", date, "T", time, " [",severity,"] ", pid, " ", 
@@ -22,17 +22,17 @@
          ]}
       ]},
       {lager_file_backend, [
-        {file, "server.log.txt"},
-        {level, info},
-        {formatter, lager_default_formatter},
-        {formatter_config, [
-           date, "T", time, " [",severity,"] ", pid, " ", 
-           {module, [module, ":"], [""]}, 
-           {function, [function, ":"], [""]}, 
-           {line, [line], [""]},
-           {endtype, [" -", endtype, "- "], [" - "]}, 
-           message, "\n"
-        ]}
+         {file, "server.log.txt"},
+         {level, info},
+         {formatter, lager_default_formatter},
+         {formatter_config, [
+            date, "T", time, " [",severity,"] ", pid, " ", 
+            {module, [module, ":"], [""]}, 
+            {function, [function, ":"], [""]}, 
+            {line, [line], [""]},
+            {endtype, [" -", endtype, "- "], [" - "]}, 
+            message, "\n"
+         ]}
       ]}
     ]},
     {traces, [
@@ -43,12 +43,13 @@
 %		{storage, mysql},
 		{storage, dets},
 		{port, 18883},
-		{port_tsl, 18483},
+		{port_tls, 18483},
 		{port_ws, 8880},
 		{port_wss, 4443},
-		{certfile, "tsl/server.crt"},
-		{cacertfile, "tsl/rootCA.pem"},
-		{keyfile, "tsl/server.key"},
+		{port_rest, 8080},
+		{certfile, "/home/alexei/.ssh/lucky3p.com/certificate.crt"},
+		{cacertfile, "/home/alexei/.ssh/lucky3p.com/ca_bundle.crt"},
+		{keyfile, "/home/alexei/.ssh/lucky3p.com/private.key"},
 		{verify, verify_none}
 	]}
 ].
