--- a/rebar.config
+++ b/rebar.config
@@ -1,62 +1,46 @@
-{src_dirs, ["src"]}.
-
-{deps, [
-    {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.9.0"}}},
-    {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "master"}}}
-  ]
-}.
-
-{erl_opts, [
-  no_debug_info, 
-  {parse_transform, lager_transform}
-]}.
-
-{overrides, [{override, mqtt_common, [{erl_opts, [no_debug_info,{parse_transform, lager_transform},{d, 'TEST'}]}]}]}.
-
-{eunit_compile_opts, [{src_dirs, ["src"]}]}.
-{eunit_opts, [verbose]}.
-
-{cover_enabled, false}.
-
-{clean_files, ["doc/*"]}.
-
-{edoc_opts, [
-  {def, [{version, "1.1.0"}]},
-  {private, false},
-  {source_path, ["src"]},
-  {title, "MQTT server for Erlang"}, 
-  {overview, "src/overview.edoc"},
-  {sort_functions, false}, 
-  {stylesheet_file, "priv/my.css"},
-  {preprocess, true},
-  {includes, ["include"]}
-]}.
-
 {relx, [
-  {release, {mqtt_server, "1.1.0" }, [mqtt_server, sasl] },
-  {sys_config, "./config/sys.config"},
-  {vm_args, "./config/vm.args"},
-  {dev_mode, false},
-  {include_erts, true},
-  {extended_start_script, true},
-	{overlay, [{mkdir, "dets-storage"},
-							{mkdir, "tsl"},
-							{copy, "dets-storage/users-db-srv.bin", "dets-storage/users-db-srv.bin"},
-							{copy, "tls/*", "tls/"}]}
+	{release,
+		{mqtt_server, "1.1.0" }, 
+		[mqtt_server, mqtt_rest, sasl],
+		[
+			{sys_config, "./config/sys.config"},
+			{vm_args, "./config/vm.args"},
+			{mode, prod},
+			{include_erts, false},
+			{extended_start_script, true},
+			{overlay, [ {mkdir, "dets-storage"},
+									{copy, "dets-storage/users-db-srv.bin", "dets-storage/users-db-srv.bin"}
+								]}
+		]
+	},
+	{release,
+		{mqtt_server_dev, "1.1.0" }, 
+		[mqtt_server, mqtt_rest, sasl],
+		[
+			{sys_config, "./config-dev/sys.config"},
+			{vm_args, "./config-dev/vm.args"},
+			{mode, dev},
+			{extended_start_script, true},
+			{overlay, [ {mkdir, "dets-storage"},
+									{copy, "dets-storage/users-db-srv.bin", "dets-storage/users-db-srv.bin"},
+									{mkdir, "tls_cnfg"},
+									{copy, "tls_cnfg/*", "tls_cnfg/"}
+								]}
+		]
+	}
 ]}.
 
 {profiles, [
   {prod, [
     {relx, [
-      {dev_mode, false},
-      {include_erts, true},
-      {include_src, false}
+      {mode, prod},
+      {include_erts, false}
     ]}
   ]},
 
   {test, [
-    {eunit_compile_opts, [{src_dirs, ["src"]}]},
-    {eunit_tests, [{dir, "test"},{dir, "test/v5"}]},
+    {eunit_compile_opts, [{src_dirs, ["apps/mqtt_rest/src", "apps/mqtt_server/src"]}]},
+    {eunit_tests, [{dir, "apps/mqtt_rest/test"}, {dir, "apps/mqtt_server/test"}, {dir, "apps/mqtt_server/test/v5"}]},
     {eunit_opts, [verbose]},
     {overrides, [{override, mqtt_common, [{erl_opts, [no_debug_info,{parse_transform, lager_transform},{d, 'TEST'}]}]}]},
     {deps, [
