Update config of dets data folder

--- a/config-dev/sys.config
+++ b/config-dev/sys.config
@@ -43,6 +43,7 @@
 	{mqtt_server, [
 %		{storage, mysql},
 		{storage, dets},
+		{dets_home_folder, "/private/var/data/dets-storage"},
 		{port, 18883},
 		{port_tls, 18483},
 		{port_ws, 8880},
