--- a/config/sys.config
+++ b/config/sys.config
@@ -42,6 +42,7 @@
 	{mqtt_server, [
 %		{storage, mysql},
 		{storage, dets},
+		{dets_home_folder, "/var/db/dets-storage"},
 		{port, 18883},
 		{port_tls, 18483},
 		{port_ws, 8880},
