--- a/rebar.config
+++ b/rebar.config
@@ -7,10 +7,7 @@
 			{vm_args, "./config/vm.args"},
 			{mode, prod},
 			{include_erts, false},
-			{extended_start_script, true},
-			{overlay, [ {mkdir, "dets-storage"},
-									{copy, "dets-storage/users-db-srv.bin", "dets-storage/users-db-srv.bin"}
-								]}
+			{extended_start_script, true}
 		]
 	},
 	{release,
@@ -21,8 +18,7 @@
 			{vm_args, "./config-dev/vm.args"},
 			{mode, dev},
 			{extended_start_script, true},
-			{overlay, [ {mkdir, "dets-storage"},
-									{copy, "dets-storage/users-db-srv.bin", "dets-storage/users-db-srv.bin"},
+			{overlay, [
 									{mkdir, "tls_cnfg"},
 									{copy, "tls_cnfg/*", "tls_cnfg/"}
 								]}
