--- a/rebar.config
+++ b/rebar.config
@@ -40,7 +40,7 @@
     {eunit_opts, [verbose]},
     {overrides, [{override, mqtt_common, [{erl_opts, [no_debug_info,{parse_transform, lager_transform},{d, 'TEST'}]}]}]},
     {deps, [
-      {mqtt_client, {git, "https://github.com/alekras/mqtt_client.git", {branch, "master"}}}
+      {mqtt_client, {git, "https://github.com/alekras/mqtt_client.git", {branch, "version-2.1.0"}}}
     ]}
 	]}
 ]}.
