--- a/apps/mqtt_server/rebar.config
+++ b/apps/mqtt_server/rebar.config
@@ -2,7 +2,7 @@
 
 {deps, [
     {cowboy,      {git, "https://github.com/ninenines/cowboy.git", {tag, "2.9.0"}}},
-    {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "master"}}}
+    {mqtt_common, {git, "https://github.com/alekras/erl.mqtt.common.git", {branch, "version-2.1.0"}}}
   ]
 }.
 
