--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {relx, [
 	{release,
-		{mqtt_server, "1.1.0" }, 
+		{mqtt_server, "2.1.0" }, 
 		[mqtt_server, mqtt_rest, sasl],
 		[
 			{sys_config, "./config/sys.config"},
@@ -11,7 +11,7 @@
 		]
 	},
 	{release,
-		{mqtt_server_dev, "1.1.0" }, 
+		{mqtt_server_dev, "2.1.0" }, 
 		[mqtt_server, mqtt_rest, sasl],
 		[
 			{sys_config, "./config-dev/sys.config"},
@@ -40,7 +40,7 @@
     {eunit_opts, [verbose]},
     {overrides, [{override, mqtt_common, [{erl_opts, [no_debug_info,{parse_transform, lager_transform},{d, 'TEST'}]}]}]},
     {deps, [
-      {mqtt_client, {git, "https://github.com/alekras/mqtt_client.git", {branch, "version-2.1.0"}}}
+      {mqtt_client, {git, "https://github.com/alekras/mqtt_client.git", {branch, "master"}}}
     ]}
 	]}
 ]}.
